packages/layer-selector/src/LayerSelector.css
.layer-selector-item {
  margin: 0 8px;
}
.layer-selector-item--text {
  overflow: hidden;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  font-size: 90%;
  max-width: 100px;
  white-space: nowrap;
}
.layer-selector--item {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
}
.layer-selector-item {
  margin: 0.5em;
}
.layer-selector-item:first-child {
  margin-top: 0;
}
.layer-selector-item:last-child {
  margin-bottom: 0;
}
.layer-selector-item input {
  margin: 0 0.5em 0 0;
}
.layer-selector {
  background: #fff;
  pointer-events: auto;
  max-width: 150px;
}
.layer-selector--width {
  width: 8em;
}
.layer-selector__toggle {
  width: 32px;
  height: 32px;
  padding: 5px;
  display: block;
}
.layer-selector--layers {
  min-height: 36px;
  min-width: 36px;
  padding: 10px 5px;
  white-space: nowrap;
}
.layer-selector--separator {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #eee;
  padding: 0;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}
.layer-selector--hidden {
  display: none;
}

